@@ -1,6 +1,7 @@
 1.18.4 /
 [Alexandr Topilski]
 - Core module
+- Design edit dialog
 
 1.18.3 / October 1, 2018
 [Alexandr Topilski]
