@@ -18,6 +18,8 @@
 
 #include "gui/widgets/hash_type_widget.h"
 
+#include <QHeaderView>
+
 #include <common/qt/utils_qt.h>
 
 #include "gui/action_cell_delegate.h"
@@ -38,6 +40,9 @@ HashTypeWidget::HashTypeWidget(QWidget* parent) : QTableView(parent), model_(nul
   setItemDelegateForColumn(KeyValueTableItem::kAction, del);
   setContextMenuPolicy(Qt::ActionsContextMenu);
   setSelectionBehavior(QAbstractItemView::SelectRows);
+
+  QHeaderView* header = horizontalHeader();
+  header->setSectionResizeMode(QHeaderView::Stretch);
 }
 
 HashTypeWidget::~HashTypeWidget() {}
